Fix subtitle in reports

--- a/System/app/templates/closing/index.html
+++ b/System/app/templates/closing/index.html
@@ -90,7 +90,7 @@
     <p class="date-employee">Cierre realizado por: {{ employee }}</p>
     <p>Ganancia aproximada: <span class="gain">{{ estimated_gain }}$</span></p>
 
-    <h2 class="subtitle">Resumen de ingresos</h2>
+    <h2 class="subtitle">Resumen detallado de ingresos</h2>
     <table class="summary-table">
       <thead>
         <tr>
